# fileflow

./: .gitignore  package-lock.json  package.json  tsconfig.e2e.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-22-file-watcher-activation.md  2026-03-22-test-coverage.md
docs/superpowers/specs/: 2026-03-22-file-watcher-activation-design.md  2026-03-22-test-coverage-design.md
e2e/: indexing.test.ts  preview.test.ts  search.test.ts
e2e/fixtures/: sample.txt
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chunker.rs  classifier.rs  embedder.rs  lib.rs  preview.rs  search.rs
src-tauri/src/commands/: files_cmd.rs  index_cmd.rs  mod.rs  preview_cmd.rs  search_cmd.rs
src-tauri/src/db/: mod.rs  retry_queue.rs  schema.rs  store.rs
src-tauri/src/extractor/: mod.rs  ocr.rs  office.rs  pdf.rs  text.rs  video.rs
src-tauri/src/indexer/: mod.rs  pipeline.rs  watcher.rs
src-tauri/tests/: integration_test.rs  retry_queue.rs  search_integration.rs  store_integration.rs
src/components/: FileItem.tsx  FileList.tsx  SearchBar.tsx  Sidebar.tsx  StatusBar.tsx
src/components/__tests__/: FileList.test.tsx  SearchBar.test.tsx  StatusBar.test.tsx
src/components/preview/: ImagePreview.tsx  MetadataPreview.tsx  OfficePreview.tsx  PdfPreview.tsx  PreviewPanel.tsx  TextPreview.tsx  VideoPreview.tsx
src/hooks/: useFiles.ts  useIndexProgress.ts  useSearch.ts
src/lib/: tauri.ts  types.ts
src/test/: setup.ts
(+2 files in other folders)
