[package]
name = "fileflow"
version = "0.1.0"
description = "FileFlow — AI-powered desktop file manager"
authors = ["you"]
edition = "2021"

[lib]
name = "fileflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# DB
lancedb = "0.14"
arrow-array = "53"
arrow-schema = "53"
arrow-cast = "53"
rusqlite = { version = "0.31", features = ["bundled"] }

# Embedding
fastembed = "4"
once_cell = "1"

# File watching
notify = "6"

# Extraction
lopdf = "0.32"
docx-rs = "0.4"
calamine = "0.24"
zip = "0.6"

# Video / preview
which = "6"
open = "5"
dirs = "5"

# Hashing / time
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
